# dow-stock

./: .gitignore  README.md  components.json  next.config.js  package.json  prettier.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  tsconfig.json
.github/workflows/: test-backend.yaml
app/: main.py  stocks.py
notebooks/: Stock Data.ipynb
src/components/: Header.tsx
src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  label.tsx
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
src/utils/: data.ts
tests/: test_main.py
