[project]
name = "stocks-fastapi"
version = "0.1.0"
description = "A simple FastAPI app to get stock data"
authors = [{ name = "Arvind .A", email = "pingarvindforquestions@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "yfinance>=0.2.18,<0.3",
    "fastapi==0.110",
    "pydantic>=2,<3"
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "uvicorn>=0.22.0,<0.23",
    "pytest>=7.4.2,<8",
    "coverage>=7.3.1,<8",
    "ruff>=0.15.11",
]
